<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/image_icon"
        app:srcCompat="@drawable/ic_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/login_to_shareon"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/share_your_experiences_and_gain_knowledge" />

    <EditText
        android:id="@+id/lable_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_1in"
        android:backgroundTint="@color/colorPrimarySoft"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_1in"
        android:backgroundTint="@color/colorPrimarySoft"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_1in"
        android:text="@string/login" />

    <TextView
        android:id="@+id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_to_shareon_register" />

</LinearLayout>