<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_person" />

        <ImageButton
            android:id="@+id/btn_browseres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_profile"
            android:layout_alignEnd="@+id/image_profile"
            android:layout_alignBottom="@+id/image_profile"
            android:layout_marginStart="-24dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/image_profile"
            android:background="@drawable/rounded_1in"
            android:contentDescription="@string/name"
            app:srcCompat="@drawable/ic_add"
            app:tint="@color/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/profile_info"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textProfilMessage" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_1in"
        android:backgroundTint="@color/colorPrimarySoft"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_1in"
        android:backgroundTint="@color/colorPrimarySoft"
        android:hint="@string/name"
        android:inputType="textPersonName|text"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/lable_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_1in"
        android:backgroundTint="@color/colorPrimarySoft"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_1in"
        android:backgroundTint="@color/colorPrimarySoft"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_1in"
        android:text="@string/register" />

    <TextView
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_a_user_login" />

</LinearLayout>