<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#FFF8E3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/no"
            android:textColor="@color/purple_200"
            android:textSize="65sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/nim"
            app:layout_constraintStart_toEndOf="@+id/text_no"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/nama"
            app:layout_constraintStart_toEndOf="@+id/text_no"
            app:layout_constraintTop_toBottomOf="@+id/text_nim" />

        <!-- menambahkan textView untuk menampung nama fakultas -->
        <!-- akhir text view yang ditambahkan -->

        <TextView
            android:id="@+id/text_prodi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/prodi"
            app:layout_constraintStart_toEndOf="@+id/text_no"
            app:layout_constraintTop_toBottomOf="@+id/text_nama" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>