<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_person" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@+id/image_post"
        android:layout_toEndOf="@+id/image_profile"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/username"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/comment_add" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_post"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_01in"
        android:backgroundTint="@color/colorPrimarySoft"
        android:contentDescription="@string/image_post"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_photo" />
</RelativeLayout>